[project]
name = "dist-depth-fork"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "augly>=1.0.0",
    "imageio>=2.35.1",
    "matplotlib>=3.7.5",
    "opencv-python>=4.11.0.86",
    "pillow>=10.4.0",
    "pywheel>=0.1",
    "tensorboardx>=2.6.2.2",
    "torch==2.2",
    "wheel>=0.45.1",
]
