[project]
name = "dist-depth-fork"
version = "0.1.0"
description = "Monocular depth estimation for indoor scenes"
readme = "README.md"
requires-python = ">=3.8"
classifiers = ["Private :: Do Not Upload"]
dependencies = [
    "augly>=1.0.0",
    "imageio>=2.35.1",
    "matplotlib>=3.7.5",
    "open3d>=0.19.0",
    "opencv-python>=4.11.0.86",
    "pillow>=10.4.0",
    "tensorboardx>=2.6.2.2",
    "torch==2.2",
    "torchvision>=0.17.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["networks", "datasets", "dpt_networks"]
py-modules = ["utils", "layers", "IO", "options", "demo", "visualize_pc", "execute", "execute_func", "execute_func_multi"]
